# gr

./: build-osx-installer.sh  gnome-recipes.sh  meson.build
osx/: org.gnome.Recipes.bundle
po/: POTFILES.in
src/: gr-details-page.c  gr-edit-page.c  gr-edit-page.ui  gr-image-viewer.c  gr-image-viewer.ui  gr-recipe-printer.c  gr-recipe-printer.h  gr-utils.c  meson.build
tests/: convert.c
tests/convert-data/: convert1.expected  convert1.in
